# marine_tii_mrs

./: README.md
nukhada_control/: CMakeLists.txt  package.xml
nukhada_control/cfg/: PID.cfg
nukhada_control/config/: TAM.yaml  conrad_etihad0.yaml  coverage_planner.yaml  kite_waypoints.yaml  thruster_manager.yaml  thruster_manager_scaled.yaml  waypoints.yaml  waypoints_kite.yaml  waypoints_pool.yaml  waypoints_pool2.yaml
nukhada_control/launch/: send_waypoints.launch  start_dp_controller.launch  start_thruster_manager.launch  wp_from_coverage.launch
nukhada_control/scripts/: dp_controller.py  wp_from_coverage.py
nukhada_description/: CMakeLists.txt  package.xml
nukhada_description/config/: al_nojoum.gps  al_raha.gps  conrad_etihad.gps  villa_pool.gps
nukhada_description/launch/: al_raha_world.launch  demo_controller.launch  demo_controller_real.launch  upload.launch
nukhada_description/meshes/: base.dae  propeller.dae  tii_color.dae  tii_raw.dae
nukhada_description/robots/: default.xacro  default_real.xacro  scaled.xacro  scaled_real.xacro
nukhada_description/rviz/: field_tests.rviz  nukhada.rviz
nukhada_description/urdf/: actuators.xacro  base.xacro  hull.xacro  pod.xacro  propeller.xacro  sensors.xacro  snippets.xacro
nukhada_description/urdf/scaled-real/: base.xacro  hull.xacro  pod.xacro  propeller.xacro  snippets.xacro
nukhada_description/urdf/scaled-sim/: base.xacro  hull.xacro  pod.xacro  sensors.xacro
nukhada_description/urdf/sim/: base.xacro  hull.xacro  pod.xacro  sensors.xacro  (+3 more)
nukhada_description/worlds/: al_raha.world  ocean.world
(+33 files in other folders)
