<?xml version="1.0"?>
<package format="2">
  <name>nukhada_control</name>
  <version>0.0.0</version>
  <description>The nukhada_control package</description>

  <maintainer email="tii@todo.todo">tii</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>dynamic_reconfigure</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
