<?xml version="1.0"?>
<package format="2">
  <name>nukhada_description</name>
  <version>0.0.0</version>
  <description>The nukhada_description package</description>

  <maintainer email="tii@todo.todo">tii</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/world_models"/>
  </export>
</package>